# atlas-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ci.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  exception_handlers.py  middleware.py
backend/app/collectors/: base.py  crunchbase.py  github.py  registry.py  sec.py  ycombinator.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: database.py
backend/app/engines/: opportunity.py
backend/app/graph/: __init__.py  backend.py
backend/app/models/: base.py  catalyst.py  company.py  discovery.py  event.py  graph.py  opportunity.py  snapshot.py  theme.py  user.py  watchlist.py
backend/app/providers/: __init__.py  catalysts.py  company_info.py  prices.py  sec_events.py
backend/app/repositories/: base.py  catalyst.py  company.py  discovery.py  event.py  graph.py  opportunity.py  snapshot.py  theme.py  user.py  watchlist.py
backend/app/schemas/: catalyst.py  company.py  company_import.py  discovery.py  event.py  graph.py  opportunity.py  snapshot.py  theme.py  user.py  watchlist.py
backend/app/services/: catalyst.py  company.py  company_import.py  discovery.py  event.py  graph.py  opportunity.py  theme.py  user.py  watchlist.py
backend/scripts/: capture_snapshots.py  create_user.py  remove_demo_companies.py  reset_catalysts.py  run_cycle.py  run_discovery.py  scheduler.py  seed_demo.py  sync_catalysts.py  sync_events.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_companies.py  test_discovery.py  test_events.py  (+4 more)
(+49 files in other folders)
